--- a/BKS/BKS.csproj
+++ b/BKS/BKS.csproj
@@ -11,6 +11,8 @@
     <SignAssembly>False</SignAssembly>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <PackageIcon>HelmSofware.png</PackageIcon>
+    <FileVersion>1.0.2</FileVersion>
+    <AssemblyVersion>1.0.2</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
