--- a/BKS/BKS.csproj
+++ b/BKS/BKS.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.Data" Version="25.1.3" />
     <PackageReference Include="EPPlus" Version="7.7.0" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
