--- a/BKS/BKS.csproj
+++ b/BKS/BKS.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <PackageReference Include="DevExpress.Data" Version="25.1.3" />
     <PackageReference Include="EPPlus" Version="7.7.0" />
+    <PackageReference Include="Krypton.Ribbon" Version="95.25.6.174" />
+    <PackageReference Include="Krypton.Toolkit" Version="95.25.6.174" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
@@ -44,6 +46,7 @@
     <PackageReference Include="PDFsharp" Version="6.2.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Radzen.Blazor" Version="6.2.5" />
+    <PackageReference Include="RibbonWinForms" Version="5.0.1.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
