--- a/BKS/BKS.csproj
+++ b/BKS/BKS.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -33,6 +33,7 @@
   <ItemGroup>
     <PackageReference Include="DevExpress.Data" Version="25.1.3" />
     <PackageReference Include="EPPlus" Version="7.7.0" />
+    <PackageReference Include="Fluent.Ribbon" Version="11.0.1" />
     <PackageReference Include="Krypton.Ribbon" Version="95.25.6.174" />
     <PackageReference Include="Krypton.Toolkit" Version="95.25.6.174" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
@@ -46,8 +47,17 @@
     <PackageReference Include="PDFsharp" Version="6.2.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Radzen.Blazor" Version="6.2.5" />
-    <PackageReference Include="RibbonWinForms" Version="5.0.1.1" />
+    <PackageReference Include="Syncfusion.Tools.Windows" Version="30.1.42" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Krypton.Ribbon">
+      <HintPath>bin\Debug\net8.0-windows\Krypton.Ribbon.dll</HintPath>
+    </Reference>
+    <Reference Include="Krypton.Toolkit">
+      <HintPath>bin\Debug\net8.0-windows\Krypton.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
