--- a/BKS/BKS.csproj
+++ b/BKS/BKS.csproj
@@ -31,10 +31,15 @@
   </ItemGroup>
 
   <ItemGroup>
+ 
     <PackageReference Include="DevExpress.Data" Version="25.1.3" />
     <PackageReference Include="EPPlus" Version="7.7.0" />
+ 
+
     <PackageReference Include="Krypton.Ribbon" Version="95.25.6.174" />
+
     <PackageReference Include="Krypton.Toolkit" Version="95.25.6.174" />
+
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
@@ -46,11 +51,17 @@
     <PackageReference Include="PDFsharp" Version="6.2.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Radzen.Blazor" Version="6.2.5" />
+  
     <PackageReference Include="RibbonWinForms" Version="5.0.1.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
@@ -61,6 +72,7 @@
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
